Verbosely Commented Logic in Controllers and Models, Added code attribution

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,35 @@
-﻿<!DOCTYPE html>
+﻿<!--
+ --------------------------------Student Information----------------------------------
+ STUDENT NO.: ST10251759
+ Name: Cameron Chetty
+ Course: BCAD Year 2
+ Module: Programming 2B
+ Module Code: CLDV6212
+ Assessment: Portfolio of Evidence (POE) Part 2
+ Github repo link: https://github.com/st10251759/prog6212-poe-part-2
+ --------------------------------Student Information----------------------------------
+
+ ==============================Code Attribution==================================
+
+ Author: w3schools
+ Link: https://www.w3schools.com/html/
+ Date Accessed: 12 October 2024
+
+ Author: w3schools
+ Link: https://www.w3schools.com/css/
+ Date Accessed: 12 October 2024
+
+ MVC APP
+ Author: Fatima Shaik
+ Link: https://github.com/fb-shaik/PROG6212-Group1-2024/blob/main/EmployeeLeaveManagement_G1.zip
+ Date Accessed: 11 October 2024
+
+
+ ==============================Code Attribution==================================
+
+-->
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
