--- a/Views/Claim/Create.cshtml
+++ b/Views/Claim/Create.cshtml
@@ -27,7 +27,7 @@
         </div>
 
         <div class="form-group">
-            <label for="SupportingDocuments">Supporting Documents (PDF only, max 15MB)</label>
+            <label for="SupportingDocuments" style="@(ViewBag.InvalidFile != null && (bool)ViewBag.InvalidFile ? "color: red;" : "color: black;")">Supporting Documents (PDF only, max 15MB)</label>
             <input type="file" name="SupportingDocuments" class="form-control" multiple required />
             <span asp-validation-for="SupportingDocuments" class="text-danger"></span>
         </div>
