--- a/Views/Claim/Create.cshtml
+++ b/Views/Claim/Create.cshtml
@@ -43,7 +43,9 @@
 <style>
     body {
         font-family: Arial, sans-serif;
-        background-color: #03041c;
+        /* background-color: #03041c; */
+        background: url('/images/temple3.jpg') no-repeat center center fixed;
+        background-size: cover;
         color: #03041c;
         margin: 0;
         padding: 0;
@@ -51,7 +53,7 @@
 
     .container-claims {
         max-width: 600px;
-        margin: 50px auto;
+        margin: 200px auto;
         padding: 20px;
         background-color: #ffffff;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -106,7 +108,9 @@
     }
 
         .btn-claims:hover {
-            background-color: #02031a;
+            background-color: #fff;
+            color: #03041c;
+            border: 1px solid #03041c;
         }
 
     .text-danger {
