--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClaimStream</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -45,7 +46,9 @@
 
     .title {
         font-size: 18em;
-        font-family: 'Brush Script MT', cursive;
+        /* font-family: 'Brush Script MT', cursive; */
+        font-family: 'Lobster', cursive;
+        
     }
 
     .buttons {
@@ -66,14 +69,28 @@
         color: white;
         text-align: center;
         width: 400px;
+        font-family: 'Poppins', sans-serif;
+        font-weight: 600;
     }
 
     .login {
         background-color: #9483c8;
     }
 
+    .login:hover {
+            color: #9483c8;
+            background-color: #fff;
+            border: 4px solid #9483c8;
+    }
+
     .register {
         background-color: #03041c;
+    }
+
+    .register:hover{
+            color: #03041c;
+            background-color: #fff;
+            border: 4px solid #03041c;
     }
 
 </style>
