--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,11 +5,11 @@
 }
 
 <div class="register-container">
-    <h1>Register</h1>
     <div class="register-box">
         <section class="register-section">
             <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-                <h2>Create a New Account</h2>
+                <h1>Register</h1>
+                <h2>Enter your details to create a New Account</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
@@ -64,7 +64,9 @@
     /* Body Styling */
     body {
         font-family: Arial, sans-serif;
-        background-color: #03041c;
+        /* background-color: #03041c; */
+        background: url('/images/temple7.jpg') no-repeat center center fixed;
+        background-size: cover;
         margin: 0;
         padding: 0;
         color: #fff;
