--- a/Views/AcademicManager/Index.cshtml
+++ b/Views/AcademicManager/Index.cshtml
@@ -78,7 +78,9 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #03041c;
+            /* background-color: #03041c; */
+            background: url('/images/temple4.jpg') no-repeat center center fixed;
+            background-size: cover;
             color: #333;
             margin: 0;
             padding: 0;
