--- a/Views/Claim/TrackClaims.cshtml
+++ b/Views/Claim/TrackClaims.cshtml
@@ -102,15 +102,17 @@
 <style>
     body {
         font-family: Arial, sans-serif;
-        background-color: #03041c;
+        /* background-color: #03041c; */
+        background: url('/images/temple3.jpg') no-repeat center center fixed;
+        background-size: cover;
         color: #333;
         margin: 0;
         padding: 0;
     }
 
     .container-claims {
-        max-width: 1000px;
-        margin: 50px auto;
+        max-width: 1200px;
+        margin: 100px auto;
         padding: 20px;
         background-color: #ffffff;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
