--- a/Views/Lecturer/Dashboard.cshtml
+++ b/Views/Lecturer/Dashboard.cshtml
@@ -68,7 +68,9 @@
 <style>
     body {
         font-family: Arial, sans-serif;
-        background-color: #03041c;
+        /* background-color: #03041c; */
+        background: url('/images/temple3.jpg') no-repeat center center fixed;
+        background-size: cover;
         margin: 0;
         padding: 0;
     }
@@ -77,7 +79,7 @@
     .container-dashboard {
         margin: 6rem auto;
         width: 100%;
-        max-width: 1200px;
+        max-width: 1300px;
         padding: 20px;
         background-color: #fff;
         border-radius: 10px;
