Updated Register Model and View to allow users to enter their phone number. Updated UserManager Controller to allow hr to edit users phobe number (update contact information).  Improved Payments Report.

--- a/Views/ManageUsers/Index.cshtml
+++ b/Views/ManageUsers/Index.cshtml
@@ -7,6 +7,7 @@
         <thead class="table-header">
             <tr>
                 <th>Email</th>
+                <th>Phone Number</th>
                 <th>Role</th>
                 <th>Actions</th>
             </tr>
@@ -16,6 +17,7 @@
             {
                 <tr>
                     <td>@user.Email</td>
+                    <td>@user.PhoneNumber</td>
                     <td>@user.Role</td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@user.Id" class="action-link">
