--- a/Views/ManageUsers/Edit.cshtml
+++ b/Views/ManageUsers/Edit.cshtml
@@ -9,6 +9,10 @@
             <input type="email" asp-for="Email" class="form-control" readonly />
         </div>
         <div class="form-group">
+            <label asp-for="PhoneNumber">Phone Number</label> <!-- New PhoneNumber field -->
+            <input type="text" asp-for="PhoneNumber" class="form-control" />
+        </div>
+        <div class="form-group">
             <label asp-for="Role">Role</label>
             <select asp-for="Role" asp-items="@(new SelectList(Model.Roles))" class="form-control"></select>
         </div>
