Added Fluent Validation with a RegisterValidator to validate fields fro users registering - added in register model. Added a Regex validation for EditUserViewModel to add validation for when hr update the phoneNumber. Added an icon for ProcessPayments in nav bar

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -99,7 +99,10 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="HR" asp-action="Dashboard"><i class="fa-solid fa-chart-simple"></i>  HR Dashboard</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="HR" asp-action="ProcessPayments"><i class="fa fa-money" aria-hidden="true"></i> Process Payments</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="HR" asp-action="ProcessPayments">
+                                    <i class="fa fa-credit-card" aria-hidden="true"></i>
+                                    Process Payments
+                                </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="HR" asp-action="GenerateReport"><i class="fa fa-area-chart" aria-hidden="true"></i> Generate Reports</a>
