--- a/Views/ManageUsers/Edit.cshtml
+++ b/Views/ManageUsers/Edit.cshtml
@@ -16,6 +16,26 @@
             <span asp-validation-for="PhoneNumber" class="text-danger"></span> <!-- Validation error for PhoneNumber -->
         </div>
 
+        <div class="form-floating mb-3">
+            <input asp-for="IDNumber" class="form-control" placeholder="IDNumber" />
+            <label asp-for="IDNumber">IDNumber</label>
+            <span asp-validation-for="IDNumber" class="text-danger"></span>
+        </div>
+
+        <div class="form-floating mb-3">
+            <input asp-for="HomeAddress" class="form-control" placeholder="HomeAddress" />
+            <label asp-for="HomeAddress">HomeAddress</label>
+            <span asp-validation-for="HomeAddress" class="text-danger"></span>
+        </div>
+
+
+        <div class="form-floating mb-3">
+            <input asp-for="Faculty" class="form-control" placeholder="Faculty" />
+            <label asp-for="Faculty">Faculty</label>
+            <span asp-validation-for="Faculty" class="text-danger"></span>
+        </div>
+
+
         <div class="form-group">
             <label asp-for="Role">Role</label>
             <select asp-for="Role" asp-items="@(new SelectList(Model.Roles))" class="form-control"></select>
